[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video_analysis_agent"
version = "0.1.0"
description = "Standalone visual analysis agent for test step verification using multimodal LLMs."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "autogen",
    "opencv-python",
    "pillow",
    "beautifulsoup4"
]

[project.optional-dependencies]
dev = [
    "pre-commit"
]

[tool.hatch.build.targets.wheel]
packages = ["agent"] 